# rag-system-project

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
clients/cli/: pyproject.toml  rag_cli.py  run.sh
clients/frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
clients/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
clients/frontend/src/components/: Chat.tsx  ChatInput.tsx  DocumentUpload.tsx  Layout.tsx  Message.tsx  Settings.tsx  Sidebar.tsx
clients/frontend/src/contexts/: ChatSessionContext.tsx  ThemeContext.tsx
clients/frontend/src/hooks/: useChatSession.ts
clients/frontend/src/lib/: api.ts  utils.ts
helm/rag-system/: Chart.yaml  README.md  values.yaml
helm/rag-system/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml
infrastructure/monitoring/: alertmanager.yml  prometheus.yml
infrastructure/monitoring/alertmanager-templates/: slack.tmpl
infrastructure/monitoring/grafana-dashboards/: README.md  dashboards.yml  query-analysis-dashboard.json  rag-system-logs.json
infrastructure/monitoring/grafana-datasources/: datasources.yaml
infrastructure/monitoring/loki/: loki-config.yaml
infrastructure/monitoring/prometheus-alerts/: rag-system-alerts.yaml
infrastructure/monitoring/promtail/: promtail-config.yaml
infrastructure/scripts/: generate_service_boilerplate.py  init-db.sql
infrastructure/scripts/backup/: backup-cronjob.yaml  full-system-backup.sh  postgres-backup.sh  postgres-restore.sh  qdrant-backup.sh
k8s/: README.md  deploy.sh
k8s/configmaps/: app-config.yaml
k8s/deployments/: api-gateway.yaml  document-ranking.yaml  document-retrieval.yaml  latex-parser.yaml  llm-generation.yaml  minio.yaml  postgres.yaml  qdrant.yaml  query-analysis.yaml  rabbitmq.yaml  redis.yaml  response-formatter.yaml
k8s/hpa/: api-gateway-hpa.yaml  document-retrieval-hpa.yaml  llm-generation-hpa.yaml
k8s/ingress/: api-gateway-ingress.yaml
k8s/namespaces/: rag-system.yaml
k8s/persistentvolumeclaims/: minio-pvc.yaml  postgres-pvc.yaml  qdrant-pvc.yaml  rabbitmq-pvc.yaml  redis-pvc.yaml
k8s/services/: api-gateway-service.yaml  document-ranking-service.yaml  document-retrieval-service.yaml  latex-parser-service.yaml  llm-generation-service.yaml  minio-service.yaml  postgres-service.yaml  qdrant-service.yaml  query-analysis-service.yaml  rabbitmq-service.yaml  redis-service.yaml  response-formatter-service.yaml
scripts/: deploy-local.sh  health-check.sh  ingest_wikipedia.py  quick-start.sh  setup-ollama.sh  start.sh  verify-setup.sh
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/: __init__.py  main.py
services/api-gateway/src/api/: __init__.py  api_key_routes.py  auth_routes.py  dependencies.py  proxy_routes.py  routes.py
services/api-gateway/src/core/: config.py  logging.py
services/api-gateway/src/middleware/: auth_middleware.py  rate_limit_middleware.py  security_headers_middleware.py
services/api-gateway/src/services/: intelligent_router.py  orchestrator.py
services/document-ranking/: Dockerfile  pyproject.toml
services/document-ranking/src/: main.py
services/document-ranking/src/api/: dependencies.py  routes.py
services/document-ranking/src/core/: config.py
services/document-ranking/src/services/: __init__.py  advanced_reranker.py  base_ranker.py  bm25_ranker.py  cross_encoder_ranker.py  ranker_factory.py
services/document-retrieval/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/document-retrieval/src/: main.py
services/document-retrieval/src/api/: dependencies.py  routes.py
services/document-retrieval/src/core/: config.py  logging.py
services/document-retrieval/src/services/: colbert_encoder.py  colbert_index.py  document_processor.py  hybrid_search.py  hyde_colbert_retrieval.py  hyde_generator.py  rag_fusion.py  upload_service.py  vector_store.py
services/latex-parser/: Dockerfile  pyproject.toml
services/latex-parser/src/: main.py
services/latex-parser/src/api/: dependencies.py  routes.py
services/latex-parser/src/core/: config.py
services/latex-parser/src/services/: base_parser.py  latex_parser.py  parser_factory.py
services/llm-generation/: Dockerfile  pyproject.toml
services/llm-generation/src/: main.py
services/query-analysis/: Dockerfile  pyproject.toml  test_features.sh
services/query-analysis/src/: main.py
services/query-analysis/src/api/: dependencies.py  routes.py
services/query-analysis/src/core/: config.py
services/query-analysis/src/services/: cache_service.py  consumers.py  intent_classifier.py  latex_query_analyzer.py  message_queue.py  query_analyzer.py  query_constructor.py  query_expander.py
services/query-analysis/tests/: README.md  __init__.py  conftest.py  test_cache_service.py  test_consumers.py  test_intent_classifier.py  test_query_expander.py  test_routes.py
services/response-formatter/: Dockerfile  pyproject.toml
services/response-formatter/src/: main.py
shared/: pyproject.toml
shared/audit/: audit_logger.py
shared/auth/: api_key_manager.py  dependencies.py  jwt_handler.py
shared/clients/: __init__.py  base_client.py  service_clients.py
shared/logging/: __init__.py  json_logging.py
shared/rate_limiting/: __init__.py  redis_rate_limiter.py
shared/validation/: __init__.py  validators.py
tests/: conftest.py  test_query_construction.py
tests/benchmarks/: README.md  advanced_benchmarks.py  beir_evaluation.py  chunking_sensitivity_benchmark.py  embedding_model_comparison_benchmark.py  embedding_quantization_benchmark.py  run_chunking_test.py  test_comprehensive_benchmarks.py  test_embedding_comparison.py  test_embeddings_on_beir.py  test_rag_techniques.py  validate_embedding_setup.py  visualization_dashboard.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_rag_flow_integration.py  test_service_integration.py
tests/load/: locustfile.py
tests/unit/: test_document_ranking.py  test_llm_generation.py  test_query_analysis.py
(+17 files in other folders)
