[tool.poetry]
name = "rag-shared"
version = "0.1.0"
description = "Shared library for RAG system services"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
pydantic = "^2.5.0"
tenacity = "^8.2.3"
pybreaker = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
