[tool.poetry]
name = "document-ranking-service"
version = "0.1.0"
description = "Document Ranking Service using cross-encoder models"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
aio-pika = "^9.3.1"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
sentence-transformers = "*"
transformers = "*"
torch = "*"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
