[tool.poetry]
name = "document-retrieval-service"
version = "0.1.0"
description = "Document Retrieval Service for RAG System"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
qdrant-client = "^1.7.0"
chromadb = "^0.6.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
pgvector = "^0.2.4"
sentence-transformers = "^2.2.2"
aio-pika = "^9.3.1"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
python-json-logger = "^2.0.7"
numpy = "^1.26.2"
python-multipart = "^0.0.6"
# ColBERT dependencies for HyDE-ColBERT
colbert-ai = "^0.2.19"
faiss-cpu = "^1.7.2"
scipy = "^1.11.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
