[tool.poetry]
name = "latex-parser-service"
version = "0.1.0"
description = "LaTeX Parser Service for mathematical formulas"
authors = ["RAG Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
aio-pika = "^9.3.1"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
sympy = "*"
latex2mathml = "*"
pylatexenc = "*"
antlr4-python3-runtime = "4.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
